--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@ton-community/func-js": "^0.9.1",
     "@tonconnect/ui": "^2.0.0",
     "@tonconnect/ui-react": "^2.1.0",
+    "@types/axios": "^0.9.36",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.0.0",
+    "axios": "^1.9.0",
     "lottie-react": "^2.4.1",
     "monaco-themes": "^0.4.4",
     "react": "^18.2.0",
