--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.11.0",
     "react-syntax-highlighter": "^15.6.1",
     "typescript": "^4.9.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "zustand": "^5.0.4"
   },
   "scripts": {
     "dev": "vite",
